fix: Дипломный проект. Этап 1
- Убрано одно из циклических обращений к БД в EventService